--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
     <input type="radio" name="provider" id="provider-wechat" value="wechat" autofocus checked> <label>微信支付</label>
     <input type="radio" name="provider" id="provider-alipay" value="alipay"> <label>支付宝</label>
     <input type="radio" name="provider" id="provider-huobi" value="huobi"> <label>火币-币币交易</label>
+    <br>
     <!--    htsec is not supported for now -->
     <!--    <input type="radio" name="provider" id="provider-htsec" value="htsec"> <label>HaiTong Sec</label>-->
     <textarea id="input" placeholder="请将账单文件内容粘贴于此..." cols="100" rows="10"></textarea>
     <textarea id="config" placeholder="请将配置文件内容粘贴于此..." cols="100" rows="10"></textarea>
     <button type="button" id="run">运行转换</button>
-    <textarea id="output" readonly placeholder="Output" cols="100" rows="100"></textarea>
+    <textarea id="output" readonly placeholder="转换后的账单输出于此..." cols="100" rows="100"></textarea>
 
     <script>
         const runButton = document.getElementById('run');
