--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 
         let wasmBin;
         fetch('double-entry-generator.wasm').then(response => response.arrayBuffer()).then((bin) => {
+            console.log("get wasm bin")
             wasmBin = bin;
+            document.getElementById('run').removeAttribute('disabled')
         });
     </script>
+
+    <p id="version"></p><br>
     <input type="radio" name="provider" id="provider-wechat" value="wechat" autofocus checked> <label>微信支付</label>
     <input type="radio" name="provider" id="provider-alipay" value="alipay"> <label>支付宝</label>
     <input type="radio" name="provider" id="provider-huobi" value="huobi"> <label>火币-币币交易</label>
@@ -29,10 +33,11 @@
     <!--    <input type="radio" name="provider" id="provider-htsec" value="htsec"> <label>HaiTong Sec</label>-->
     <textarea id="input" placeholder="请将账单文件内容粘贴于此..." cols="100" rows="10"></textarea>
     <textarea id="config" placeholder="请将配置文件内容粘贴于此..." cols="100" rows="10"></textarea>
-    <button type="button" id="run">运行转换</button>
+    <button type="button" id="run" disabled>运行转换</button>
     <textarea id="output" readonly placeholder="转换后的账单输出于此..." cols="100" rows="100"></textarea>
 
     <script>
+        const version = document.getElementById('version');
         const runButton = document.getElementById('run');
         const input = document.getElementById('input');
         const config = document.getElementById('config');
@@ -76,6 +81,35 @@
         }
 
         runButton.addEventListener('click', runTranslate)
+
+        const go = new Go();
+        go.argv = ['double-entry-generator', 'version'];
+        go.exit = (code) => {
+            if (code > 0) {
+                console.log('Exit ' + code);
+                alert('无法获取 double-entry-generator 版本信息！错误详情请见控制台。')
+            }
+        };
+
+        // FIXME: fetch binary again...
+        fetch('double-entry-generator.wasm').then(response => response.arrayBuffer()).then(function(bin) {
+            WebAssembly.instantiate(bin, go.importObject).then((result) => {
+                let outputBuf = '';
+                const decoder = new TextDecoder("utf-8");
+                let originalWriteSync = globalThis.fs.writeSync
+                globalThis.fs.writeSync = (fd, buf) => {
+                    outputBuf = decoder.decode(buf);
+                    version.textContent = outputBuf;
+                    return buf.length;
+                };
+                go.run(result.instance)
+                    .catch((err) => {
+                        console.log(err)
+                        alert('无法获取 double-entry-generator 版本信息！\n\n' + err)
+                    });
+                globalThis.fs.writeSync = originalWriteSync
+            })
+        });
     </script>
     </body>
 </html>
