--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html lang="zh-Hans">
     <head>
+        <title>double-entry-generator WASM Demo</title>
         <meta charset="utf-8">
     </head>
 <body>
