--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html lang="zh-Hans">
+<!DOCTYPE html>
+<html lang="zh-Hans">
     <head>
         <title>double-entry-generator WASM Demo</title>
         <meta charset="utf-8">
